name:
  bytestring-tree-builder
version:
  0.2
category:
  ByteString
synopsis:
homepage:
  https://github.com/nikita-volkov/bytestring-tree-builder 
bug-reports:
  https://github.com/nikita-volkov/bytestring-tree-builder/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/bytestring-tree-builder.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    ByteString.TreeBuilder.Prelude
    ByteString.TreeBuilder.Poker
  exposed-modules:
    ByteString.TreeBuilder
  build-depends:
    chunk-tree >= 0.1.1 && < 0.2,
    bytestring >= 0.10 && < 0.11,
    base-prelude >= 0.1.19 && < 0.2,
    base >= 4.6 && < 5


benchmark benchmark
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    benchmark
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    bytestring-tree-builder,
    -- benchmarking:
    criterion == 1.1.*,
    -- data:
    bytestring,
    -- general:
    deepseq == 1.*,
    base-prelude


test-suite tasty
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tasty
  main-is:
    Main.hs
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    bytestring-tree-builder,
    -- testing:
    tasty == 0.11.*,
    tasty-quickcheck == 0.8.*,
    tasty-smallcheck == 0.8.*,
    tasty-hunit == 0.9.*,
    quickcheck-instances >= 0.3.11 && < 0.4,
    QuickCheck >= 2.8.1 && < 2.9,
    -- data:
    bytestring,
    -- general:
    base-prelude

